[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyETA"
version = "0.1.0"
authors = [
    { name = "Poeschl" }
]
description = "A python wrapper to connect to your ETA heating system"
readme = "README.md"
keywords = ["ETA", "meinETA", "REST"]
license = { file = "LICENCE" }
requires-python = ">=3.8"
classifiers = [
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11'
]
dependencies = [
    "requests==2.31.0"
]

[project.urls]
"Homepage" = "https://github.com/Poeschl/pyETA"
"Bug Tracker" = "https://github.com/Poeschl/pyETA/issues"
